<resources>
    <string name="app_name">akmTranslateKotlin</string>
    <string name="textTranslate">изучение слов. русский вводится, кнопка изучить. сохраняется в базу и изучаешь!
    задачи: идею обработать,основной сценарий, требования</string>
    <string name="empty">ввести слово</string>
    <string name="translate">translate</string>
    <string name="textHowToTranslate">How to translate?</string>
    <string name="priznak">/</string>
    <string name="textButtonStart">Start</string>
    <string name="textButtonNext">Next</string>

</resources>